packages/components/src/components/tab-item/tab-item.scss
@use "@db-ux/core-foundations/build/styles/variables";
@use "@db-ux/core-foundations/build/styles/colors";
@use "@db-ux/core-foundations/build/styles/helpers";
@use "@db-ux/core-foundations/build/styles/icons";
@use "../../styles/internal/db-puls";

db-tab-item,
dbtabitem {
	display: contents;
}

.db-tab-item {
	position: relative;
	background-color: colors.$db-adaptive-bg-basic-transparent-full-default;
	padding-block: variables.$db-spacing-fixed-xs;
	padding-inline: variables.$db-spacing-fixed-xs;
	overflow: visible;
	align-items: center;
	justify-content: center;
	white-space: nowrap;
	border: 0;
	border-radius: variables.$db-border-radius-sm;
	cursor: pointer;
	font-family: inherit;
	font-size: inherit;
	color: inherit;
	flex-shrink: 0;
	z-index: 2;
	max-inline-size: variables.$db-sizing-2xl;

	@media screen and (prefers-reduced-motion: no-preference) {
		transition: background-color variables.$db-transition-duration-fast;
	}

	.db-tab-label {
		max-inline-size: 100%;

		@include helpers.display(block);

		&[data-icon]:not([data-show-icon="false"]) {
			&::before {
				@extend %icon;

				margin-inline-end: variables.$db-spacing-fixed-xs;
				vertical-align: middle;
			}
		}

		&[data-icon-trailing]:not([data-show-icon-trailing="false"]) {
			&::after {
				@extend %icon;

				margin-inline-start: variables.$db-spacing-fixed-xs;
				vertical-align: middle;
				content: var(--db-icon-trailing, attr(data-icon-trailing));

				@supports (content: ""/"") {
					content: var(--db-icon-trailing, attr(data-icon-trailing)) / "";
				}
			}
		}
	}

	[data-orientation="vertical"] & .db-tab-label {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

	@extend %db-puls;
	@include helpers.display(flex);

	[data-density="functional"] & {
		padding-block: variables.$db-spacing-fixed-2xs;
		padding-inline: variables.$db-spacing-fixed-2xs;
	}

	[data-density="expressive"] & {
		padding-block: variables.$db-spacing-fixed-sm;
		padding-inline: variables.$db-spacing-fixed-sm;
	}

	&::after {
		inline-size: 0;
		block-size: variables.$db-border-width-xs;

		@media screen and (prefers-reduced-motion: no-preference) {
			transition:
				block-size variables.$db-transition-duration-fast variables.$db-transition-timing-emotional,
				inline-size variables.$db-transition-duration-fast variables.$db-transition-timing-emotional !important; // overrides physical `width`/`height` transition from %db-puls in _db-puls.scss
		}
	}

	[data-orientation="vertical"] & {
		max-inline-size: 100%;
		flex-shrink: 1;

		&::after {
			inline-size: variables.$db-border-width-xs;
			block-size: 0;
		}
	}

	&[aria-selected="true"],
	&[data-active="true"] {
		font-weight: 700;
	}

	&:disabled {
		opacity: variables.$db-opacity-md;
		cursor: initial;
	}

	// TODO: Investigate why helpers.hover mixin doesn't work here
	// Other components use @include helpers.hover directly, but for tab-item
	// it doesn't apply the hover effect. Using native pseudo-classes as workaround.
	&:not(:disabled):hover,
	&:not(:disabled):focus-visible {
		background-color: colors.$db-adaptive-bg-basic-transparent-full-hovered;
	}
}

